8214578: [macos] Problem with backslashes on macOS/JIS keyboard: Java ignores system settings

Reviewed-by: serb, prr