src/java.desktop/macosx/native/libawt_lwawt/awt/AWTView.h
@@ -37,6 +37,9 @@
 
     // TODO: NSMenu *contextualMenu;
 
+    // Keyboard layout
+    NSTextInputSourceIdentifier kbdLayout;
+
     // dnd support (see AppKit/NSDragging.h, NSDraggingSource/Destination):
     CDragSource *_dragSource;
     CDropTarget *_dropTarget;
